gradient not covering the entire page is now fixed

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 .wrapper {
     position: relative;
     width: 1440px;
-    min-height: 100vh;
+    min-height: 1388px;
     margin: auto;
 }
 
